Fixed the problem of the overflow-x problem on the root of the project

--- a/app/globals.css
+++ b/app/globals.css
@@ -127,5 +127,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    /* overflow-x: clip;
+    max-width: 100vw; */
   }
 }
